--- a/package.json
+++ b/package.json
@@ -12,8 +12,6 @@
   "dependencies": {
     "express": "^4.17.3",
     "mongodb": "^4.4.0",
-    "mongoose": "^6.2.3",
-    "winston": "^3.6.0",
-    "winston-mongodb": "^5.0.7"
+    "node-worker-threads-pool": "^1.5.1"
   }
 }
